# Addix-Gama

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  fix_all.py  gama_state.md  pyproject.toml  requirements.txt
.claude/skills/gama/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CORE_CONCEPTS.md  GETTING_STARTED.md
examples/: demo_run.py
extension/: extension.json
gama/: __init__.py  api.py  cli.py  config.py  engine.py  loop.py  reporter.py  schema.py
gama/evaluators/: __init__.py  auth_check.py  db_stress.py  security.py  ui_ux.py
tests/: test_cli.py  test_config.py  test_engine.py  test_loop.py  test_reporter.py
tests/dummy_codebases/buggy/: main.py
tests/dummy_codebases/clean/: main.py
