[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addix-gama"
version = "0.1.0"
description = "Autonomous continuous-testing and validation engine"
readme = "README.md"
dependencies = [
    "fastapi",
    "typer",
    "pydantic",
    "pydantic-settings",
    "reportlab",
    "pytest",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["gama*"]
