[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addix-gama"
version = "0.1.0"
description = "Autonomous continuous-testing and validation engine"
readme = "README.md"
authors = [
    {name = "Addix Gama Authors", email = "authors@addix.io"}
]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "typer",
    "pydantic",
    "pydantic-settings",
    "reportlab",
    "pytest",
]
requires-python = ">=3.10"

[project.scripts]
gama = "gama.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gama*"]
